--- a/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
+++ b/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DockForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Win32\Enums\ShowWindowCommands.cs" />
     <Compile Include="Win32\Structs\WINDOWPLACEMENT.cs" />
     <Compile Include="WindowManipulationHelper.cs" />
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DockForm.resx">
       <DependentUpon>DockForm.cs</DependentUpon>
     </EmbeddedResource>
