--- a/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
+++ b/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartupHelper.cs" />
     <Compile Include="TabletModeHelper.cs" />
     <Compile Include="TaskbarHelper.cs" />
     <Compile Include="TouchKeyboardHelper.cs" />
