--- a/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
+++ b/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquirrelHelper.cs" />
     <Compile Include="StartupHelper.cs" />
     <Compile Include="TabletModeHelper.cs" />
     <Compile Include="TaskbarHelper.cs" />
