--- a/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
+++ b/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SquirrelHelper.cs" />
+    <Compile Include="SquirrelUpdateManagerExtension.cs" />
     <Compile Include="StartupHelper.cs" />
     <Compile Include="TabletModeHelper.cs" />
     <Compile Include="TaskbarHelper.cs" />
