--- a/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
+++ b/Windows10TouchKeyboardFocusFix/Windows10TouchKeyboardFocusFix.csproj
@@ -102,8 +102,10 @@
     <Compile Include="DockForm.Designer.cs">
       <DependentUpon>DockForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GoogleAnalyticsHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Secrets.cs" />
     <Compile Include="SquirrelHelper.cs" />
     <Compile Include="SquirrelUpdateManagerExtension.cs" />
     <Compile Include="StartupHelper.cs" />
